--- a/OPlessonExampleProject/OPlessonExampleProject.vcxproj.filters
+++ b/OPlessonExampleProject/OPlessonExampleProject.vcxproj.filters
@@ -18,9 +18,12 @@
     <ClInclude Include="main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="student.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="task01.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
