--- a/OPlessonExampleProject/OPlessonExampleProject.vcxproj.filters
+++ b/OPlessonExampleProject/OPlessonExampleProject.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="student.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="student.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
