добавили статические компоненты класс студент

--- a/OPlessonExampleProject/OPlessonExampleProject.vcxproj
+++ b/OPlessonExampleProject/OPlessonExampleProject.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="group.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="manager.h" />
     <ClInclude Include="student.h" />
