--- a/OPlessonExampleProject/OPlessonExampleProject.vcxproj.filters
+++ b/OPlessonExampleProject/OPlessonExampleProject.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="group.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
